<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">取什么名字呢</string>
    <string name="login_name">登录</string>
    <string name="main_name">还没想好软件名！</string>
    <string name="action_settings">Settings</string>
    <string name="main">进入主页面</string>
    <string name="account">账号：</string>
    <string name="Cipher">密码：</string>
    <string name="PleaseEnterTheAccount">请输入账号&#8230;</string>
    <string name="PleaseEnterTheCipher">请输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="AutomaticLogon">自动登录</string>
    <string name="RememberThePassword">记住密码</string>
    <string name="RegistrationNumber">注册账号：</string>
    <string name="TheLoginPassword">注册密码：</string>
    <string name="ConfirmPassword">确认密码：</string>
    <string name="Determine">确定</string>
    <string name="Cancel">取消</string>
    <string name="show1">列表一</string>
    <string name="show2">列表二</string>
    <string name="show3">列表三</string>
    <string name="show4">列表四</string>
    <string name="show5">列表五</string>
    <string name="PersonalData">个人资料</string>
    <string name="PersonalInfo">个人信息</string>
    <string name="finishs">注销</string>
    <string name="exit">退出</string>
    <string name="send">发送</string>
    <string name="view1_show1">热门精品</string>
    <string name="view1_show2">最新首发</string>
    <string name="view1_show3">专属礼包</string>
    <string name="view1_show4">会员专区</string>
    <string name="update">更新</string>
    <string name="News">消息</string>
    <string name="Contact">联系人</string>
    <string name="Dynamic">动态</string>
    <string name="Photograph">拍照</string>
    <string name="Map">地图</string>
    <string name="Call">通话</string>
    <string name="add">添加</string>
    <string name="Administration">管理</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>

</resources>