<com.example.view.DragLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/d1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main" >

    <!-- 左侧拖动界面布局 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="50dp" >

        <LinearLayout
            android:id="@+id/layou1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/main_picture"
                android:layout_width="@dimen/main_picture_width"
                android:layout_height="@dimen/main_picture_height" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="100dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/main_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/main_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/layou1" >

            <com.example.view.ReboundScrollView
                android:layout_width="fill_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="fill_parent" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    
                    android:layout_height="fill_parent" >

                    <ListView
                        android:id="@+id/main_list"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="50dp" >
                    </ListView>
                </RelativeLayout>
            </com.example.view.ReboundScrollView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设置" />
        </LinearLayout>
    </RelativeLayout>

    <!-- 主界面 -->

    <com.example.view.MyRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeeeee" >

        <FrameLayout
            android:id="@+id/main_container"
            android:layout_width="fill_parent"
            android:layout_above="@+id/layou"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:id="@+id/layou"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/main_height"
            android:layout_alignParentBottom="true"
            android:background="@drawable/edge" >

            <Button
                android:id="@+id/main_news"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/News"
                android:textColor="#00a0eb" />

            <Button
                android:id="@+id/main_contact"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/Contact"
                android:textColor="#6f6f6f" />

            <Button
                android:id="@+id/main_dynamic"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/Dynamic"
                android:textColor="#6f6f6f" />

            <Button
                android:id="@+id/main_Photograph"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/Photograph"
                android:textColor="#6f6f6f" />

            <Button
                android:id="@+id/main_Map"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/Map"
                android:textColor="#6f6f6f" />
        </LinearLayout>
    </com.example.view.MyRelativeLayout>

</com.example.view.DragLayout>